[package]
name = "lwext4_rust"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>", "Mivik <mivikq@gmail.com>"]
version = "0.2.0"
edition = "2024"
license = "GPL-2.0"
repository = "https://github.com/Starry-OS/lwext4_rust"
description = "lwext4 in Rust"

links = "lwext4"
build = "build.rs"

[features]
default = ["print", "std", "block-cache"]
print = ["printf-compat"]
block-cache = []
std = []

[dependencies]
log = "0.4"
printf-compat = { version = "0.2", default-features = false, optional = true }

[build-dependencies]
bindgen = "0.72"
